[gd_scene load_steps=2 format=3 uid="uid://dc8udcp0tduqv"]

[ext_resource type="Script" path="res://Tests/GlobalTimerTest.gd" id="1"]

[node name="GlobalTimerTest" type="Node2D"]
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 648.0

[node name="NewTimerMenu" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 103.0
offset_bottom = 267.0

[node name="LabelName" type="Label" parent="Control/NewTimerMenu"]
layout_mode = 2
offset_right = 102.0
offset_bottom = 26.0
text = "Name"

[node name="NameValue" type="TextEdit" parent="Control/NewTimerMenu"]
custom_minimum_size = Vector2i(100, 40)
layout_mode = 2
offset_top = 30.0
offset_right = 102.0
offset_bottom = 70.0
text = "TimerName"
placeholder_text = "TimerName"
wrap_mode = 1
caret_blink = true

[node name="LabelTime" type="Label" parent="Control/NewTimerMenu"]
layout_mode = 2
offset_top = 74.0
offset_right = 102.0
offset_bottom = 100.0
text = "Time"

[node name="TimeValue" type="SpinBox" parent="Control/NewTimerMenu"]
layout_mode = 2
offset_top = 104.0
offset_right = 102.0
offset_bottom = 135.0
value = 3.0
alignment = 1

[node name="OneshotValue" type="CheckBox" parent="Control/NewTimerMenu"]
layout_mode = 2
offset_top = 139.0
offset_right = 102.0
offset_bottom = 170.0
text = "One Shot"

[node name="AutostartValue" type="CheckBox" parent="Control/NewTimerMenu"]
layout_mode = 2
offset_top = 174.0
offset_right = 102.0
offset_bottom = 205.0
text = "Autostart"

[node name="ButtonCreate" type="Button" parent="Control/NewTimerMenu"]
layout_mode = 2
offset_top = 209.0
offset_right = 102.0
offset_bottom = 240.0
text = "Create"

[node name="Timers" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2i(100, 300)
layout_mode = 0
offset_left = 413.0
offset_top = 45.0
offset_right = 569.0
offset_bottom = 289.0

[node name="ItemList" type="ItemList" parent="Control/Timers"]
layout_mode = 2
offset_right = 156.0
offset_bottom = 265.0
size_flags_vertical = 3
auto_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Timers"]
layout_mode = 2
offset_top = 269.0
offset_right = 156.0
offset_bottom = 300.0

[node name="ButtonStart" type="Button" parent="Control/Timers/HBoxContainer"]
layout_mode = 2
offset_right = 46.0
offset_bottom = 31.0
text = "Start"

[node name="ButtonStop" type="Button" parent="Control/Timers/HBoxContainer"]
layout_mode = 2
offset_left = 50.0
offset_right = 93.0
offset_bottom = 31.0
text = "Stop"

[node name="ButtonDelete" type="Button" parent="Control/Timers/HBoxContainer"]
layout_mode = 2
offset_left = 97.0
offset_right = 156.0
offset_bottom = 31.0
text = "Delete"
